--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular-material": "^1.1.1",
     "jquery": "^3.1.1",
     "json-server": "^0.9.4",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "requirejs-text": "^2.0.15",
+    "angular-route": "^1.6.4"
   }
 }
